testsuite/tests/typing-recmod/t08bad.compilers.reference
File "t08bad.ml", line 10, characters 15-68:
10 | module rec A : sig type 'a t = <m: 'a list B.t; n: 'a array B.t> end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: In the definition of B.t, type 'a array A.t should be 'a A.t
